trunk/grammars/robo_hero_parser.treetop
grammar RoboHero
  rule rules_data
    keyword_ability* attack_elements:attack* activated_ability_elements:activated_ability* {
      def attacks
        attack_elements.elements
      end

      def activated_abilities
        activated_ability_elements.elements
      end
    }
  end

  rule keyword_ability
    "[" "]"
  end

  rule attack
    "[Attack " activated_ability "]"
  end

  rule activated_ability
    costs ": " effect {
      def cost_array
        costs.cost_array
      end
    }
  end

  rule costs
    cost_element* {
      def cost_array
        elements.map do |element|
          element.cost
        end
      end
    }
  end

  rule cost_element
    '(' (energy_cost / cooldown_cost) ')' {
      def cost
        elements[1].cost
      end
    }
  end

  rule energy_cost
    cost_amount:([0-9]+) ('EN' / 'E') {
      def cost
        [ 'energy', cost_amount.text_value.to_i ]
      end
    }
  end

  rule cooldown_cost
    cost_amount:([0-9]+) 'C' {
      def cost
        [ 'cooldown', cost_amount.text_value.to_i ]
      end
    }
  end

  rule effect
    [a-zA-Z0-9_ \.]*
  end
end
